--- a/static/songquiz.css
+++ b/static/songquiz.css
@@ -14,6 +14,14 @@ body {
     padding: 0;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    position: relative;
+}
 
 header {
     position: absolute;
