GODOFMUSIC_파일 연결 완료

--- a/templates/choice.html
+++ b/templates/choice.html
@@ -23,7 +23,7 @@
             <span>곡 설명 제목 퀴즈</span>
         </div>
         <div class="choice" onclick="navigateToQuiz('karaoke')">
-            <img src="{{ url_for('static', filename='Karaoke.png') }}" alt="Karaoke Quiz">
+            <img src="{{ url_for('static', filename='karaoke.png') }}" alt="Karaoke Quiz">
             <span>노래방 반주 퀴즈</span>
         </div>
         <div class="choice" onclick="navigateToQuiz('music_video')">
