--- a/templates/result.html
+++ b/templates/result.html
@@ -20,7 +20,7 @@
             <button onclick="location.href='/restart_quiz/{{ quiz_type }}'">다시 시작하기</button>
 
             <!-- 다른 게임 도전하기 버튼 -->
-            <button onclick="location.href='/'">다른 퀴즈 도전 하기</button>
+            <button onclick="location.href='/another_quiz'">다른 퀴즈 도전 하기</button>
         </div>
     </div>
 </body>
