--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
 
 <body>
     <div class="logo">
-        <img src="/static/godofmusic.png" alt="">
+        <img src="/static/images/godofmusic.png" alt="">
     </div>
 
     <div class="start" onclick="openMain()">
