--- a/static/choice.css
+++ b/static/choice.css
@@ -51,11 +51,46 @@ body {
     object-fit: cover;
 }
 
-.choice span {
+#first{
     position: absolute;
-    bottom: 10px;
-    color: white;
-    font-size: 20px;
+    bottom: 100px;
+    font-size: 40px;
     font-weight: bold;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
+
+#first .gasa {
+    color: yellow; /* "가사"를 노란색으로 설정 */
+}
+
+#first .nemo {
+    color: aqua; /* "네모"를 아쿠아색으로 설정 */
+}
+
+#first .quiz {
+    color: orange; /* "퀴즈"를 주황색으로 설정 */
+}
+
+#second{
+    position: absolute;
+    bottom: 30px;
+    color: white;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+#third{
+    position: absolute;
+    bottom: 80px;
+    color: white;
+    left: 200px;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+#four{
+    position: absolute;
+    bottom: 170px;
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
 }
